sm8250-common: parts: Implement HBM switch
 * Reuse DC dimming fragment to commonise both switches

Signed-off-by: Pranav Temkar <pranavtemkar@gmail.com>
Signed-off-by: Carlos Ayrton Lopez Arroyo <15030201@itcelaya.edu.mx>

--- a/parts/res/xml/display_settings.xml
+++ b/parts/res/xml/display_settings.xml
@@ -22,4 +22,10 @@
         android:icon="@drawable/ic_dcdimming"
         android:title="@string/dc_dimming_enable_title"
         android:summary="@string/dc_dimming_enable_summary" />
+
+    <SwitchPreference
+        android:key="hbm_mode"
+        android:defaultValue="false"
+        android:title="@string/hbm_mode_title"
+        android:summary="@string/hbm_mode_summary" />
 </PreferenceScreen>
